docs(website): remove blog section, link to devbypros.com

--- a/website/content/index.mdx
+++ b/website/content/index.mdx
@@ -206,4 +206,6 @@ dev mcp install           # For Claude Code
 
 ---
 
+[Read the story behind dev-agent →](https://www.devbypros.com/blog/10-days-of-vibe-coding)
+
 MIT License • Built by [prosdev](https://github.com/prosdev)
